# fractalengine

./: .gitignore  AGENTS.md  BUILDING.md  Cargo.toml  PLAYBOOK.md  README.md  test_tool.ts
.cargo/: config.toml
.claude/: next-session-prompt.md  settings.local.json
.omc/: project-memory.json
.omc/research/fractalengine-p2p-feasibility/: RESEARCH-REPORT.md
.omc/scientist/: fractalengine_futurist.ipynb
.omc/scientist/reports/: 2026-03-21_analogical_systems.md  2026-03-21_archaeological_findings.md  2026-03-21_blind_spot_register.md  2026-03-21_p2p-virtual-worlds-history.md  2026-03-21_systems_integration_report.md  20260321_092514_fractalengine_contrarian_risk_report.md  20260321_132204_fractalengine_futurist_report.md  risk_registry.json
.omc/sessions/: 1b797221-7278-48e2-9fc7-cdea40142ef5.json  308a37c1-1f5b-4807-b0a2-0b181b256296.json  373f4013-c464-47a7-88a5-87eac6566551.json  3c94a3a6-6734-46b9-814e-4c91846b818b.json  a67d6d6b-aa31-4c39-a663-232378d04145.json  af354db4-a203-46ee-b9c1-2e4f5fe9a589.json  e0291e48-b04f-40aa-81ff-3efab01a1b01.json  ef8910dd-504d-46fe-b8d2-5b5171b3e92b.json
.omc/specs/: deep-interview-fractalengine-p2p-digital-twin.md
.omc/state/: agent-replay-dde9ed50-0674-4b21-a292-67dc9acb1c40.jsonl  idle-notif-cooldown.json  last-tool-error.json  mission-state.json  subagent-tracking.json
.omc/state/checkpoints/: checkpoint-2026-03-21T20-53-53-711Z.json
conductor/: .conductor_session_log  PLAYBOOK.md  product-guidelines.md  product.md  tech-stack.md  tracks.md  workflow.md
conductor/code_styleguides/: general.md  rust.md
conductor/tracks/bloom_stage_20260322/: metadata.json  plan.md  spec.md
conductor/tracks/code_review_20260430_channel_errors/: plan.md  spec.md
conductor/tracks/code_review_20260430_clippy_quality/: plan.md  spec.md
conductor/tracks/code_review_20260430_db_graceful/: plan.md  spec.md
conductor/tracks/code_review_20260430_egui_deprecation/: plan.md  spec.md
conductor/tracks/code_review_20260430_mega_function/: plan.md  spec.md
conductor/tracks/code_review_20260430_performance_hotpaths/: plan.md  spec.md
conductor/tracks/code_review_cleanup_20260419/: plan.md  spec.md
conductor/tracks/cross_platform_desktop_20260429/: metadata.json  plan.md  spec.md
conductor/tracks/db_repository_pattern_20260407/: metadata.json  plan.md  spec.md
conductor/tracks/drag_drop_placement_20260402/: metadata.json  (+2 more)
docker/: Dockerfile.relay  README.md
docs/: architecture.md  dataflows.md  diagrams.md  guide.md  security-checklist.md  style-guide.md  tests-todo.md  unwrap-audit.md  webview-threat-model.md
docs/diagrams/: 01-system-overview.md  02-startup-sequence.md  03-channel-bridge.md  04-identity-auth-flow.md  05-database-schema.md  06-network-topology.md  07-asset-pipeline.md  08-webview-architecture.md  09-sync-and-caching.md  10-crate-dependencies.md  11-user-interaction-flow.md
fe-api/: Cargo.toml
fe-api/src/: assets.rs  auth.rs  lib.rs  mcp.rs  rest.rs  server.rs  types.rs  ws.rs
fe-auth/: Cargo.toml
fe-auth/src/: cache.rs  handshake.rs  lib.rs  revocation.rs  session.rs  verse_invite.rs
fe-auth/tests/: auth_test.rs
fe-database/: Cargo.toml
fe-database/examples/: dump_db.rs
fe-database/src/: admin.rs  api_token_store.rs  atlas.rs  invite.rs  lib.rs  migrations.rs  model_url_meta.rs  op_log.rs  queries.rs  rbac.rs  reconcile.rs  repo.rs  role_level.rs  role_manager.rs  schema.rs  scope.rs  scoped_invite.rs  space_manager.rs  types.rs  verse.rs
fe-database/src/handlers/: admin.rs  api_token.rs  crud.rs  entity.rs  invite.rs  mod.rs  rbac.rs  seed.rs  transform.rs
fe-database/tests/: db_test.rs  rbac_test.rs  schema_idempotent.rs
fe-identity/: Cargo.toml
fe-identity/src/: api_token.rs  did_key.rs  jwt.rs  keychain.rs  keypair.rs  lib.rs  resource.rs
fe-identity/src/secret_store/: mod.rs  os_keystore.rs
fe-network/: Cargo.toml
fe-network/src/: discovery.rs  gossip.rs  iroh_blobs.rs  iroh_docs.rs  lib.rs  swarm.rs  types.rs
fe-network/tests/: gossip_test.rs  network_test.rs
fe-renderer/: Cargo.toml
fe-renderer/src/: addressing.rs  axis_gizmo.rs  camera.rs  dead_reckoning.rs  grid.rs  ingester.rs  lib.rs  loader.rs  viewport.rs
fe-renderer/tests/: renderer_test.rs
fe-runtime/: Cargo.toml
fe-runtime/src/: app.rs  bevy_blob_reader.rs  blob_store.rs  channels.rs  lib.rs  messages.rs  peer_registry.rs  wiring.rs
fe-sync/: Cargo.toml
fe-sync/src/: bevy_asset_reader.rs  blob_store.rs  cache.rs  endpoint.rs  lib.rs  messages.rs  offline.rs  reconciliation.rs  replication.rs  replicator.rs  status.rs  sync_thread.rs  verse_peers.rs
fe-sync/tests/: sync_test.rs
fe-test-harness/: Cargo.toml  README.md
fe-test-harness/src/: main.rs  peer.rs
fe-test-harness/src/fixtures/: mod.rs
fe-test-harness/src/scenarios/: api_token_flow.rs  blob_roundtrip.rs  invite_flow.rs  migration.rs  mod.rs  two_peer_blob_exchange.rs  two_peer_sync_pipeline.rs  two_peer_verse_join.rs  verse_sync.rs
fe-test-harness/tests/: integration.rs
fe-ui/: Cargo.toml
fe-ui/src/: dialogs.rs  gimbal.rs  inspector_panel.rs  lib.rs  navigation_manager.rs  node_manager.rs  panels.rs  plugin.rs  role_chip.rs  theme.rs  verse_manager.rs  viewport.rs
fe-ui/src/atlas/: dashboard.rs  mod.rs  model_editor.rs  petal_wizard.rs  room_editor.rs  search_bar.rs  tag_panel.rs  visibility_control.rs
fe-webview/: Cargo.toml
fe-webview/src/: backend.rs  ipc.rs  lib.rs  overlay.rs  petal_portal.rs  plugin.rs  security.rs
fe-webview/src/backends/: mod.rs  servo.rs  stub.rs  wry.rs
fe-webview/tests/: security_test.rs
fractalengine/: Cargo.toml
fractalengine-relay/: Cargo.toml  README.md
fractalengine-relay/src/: main.rs
fractalengine/src/: main.rs
fractalengine/tests/: integration_test.rs  security_harness.rs
fuzz/: Cargo.toml
fuzz/targets/: ed25519_verify.rs  jwt_parse.rs
research/cross-track-alignment/: objective.md  report.md
research/p2p-mycelium/: findings.md  objective.md
scripts/: api_test_setup.ps1  audit.sh  test_bounce.ps1  test_circle.ps1  test_move_now.ps1  test_reset.ps1  test_spiral.ps1
(+76 files in other folders)
