[workspace]
members = [
    "fractalengine",
    "fe-runtime",
    "fe-network",
    "fe-database",
    "fe-identity",
    "fe-renderer",
    "fe-auth",
    "fe-webview",
    "fe-sync",
    "fe-ui",
]
resolver = "2"

[workspace.dependencies]
bevy = { version = "0.18", features = ["dynamic_linking"] }
bevy_egui = "0.39"
crossbeam = "0.8"
tokio = { version = "1", features = ["full"] }
surrealdb = { version = "3.0", features = ["kv-surrealkv"] }
libp2p = { version = "0.56", features = ["kad", "quic", "tokio", "macros"] }
iroh-blobs = "0.35"
iroh-gossip = "0.35"
iroh-docs = "0.35"
ed25519-dalek = { version = "2.2", features = ["rand_core", "pkcs8"] }
jsonwebtoken = { version = "10.3", features = ["rust_crypto"] }
keyring = "3"
blake3 = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
ulid = "1"
