[package]
name = "fe-database"
version = "0.1.0"
edition = "2021"

[dependencies]
fe-runtime = { path = "../fe-runtime" }
surrealdb = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
crossbeam = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
ulid = { workspace = true }
bevy = { workspace = true }
chrono = "0.4"

[dev-dependencies]
crossbeam = { workspace = true }

[package.metadata.env]
SURREAL_SYNC_DATA = "true"
