[package]
name = "fe-identity"
version = "0.1.0"
edition = "2021"

[dependencies]
ed25519-dalek = { workspace = true }
jsonwebtoken = { workspace = true }
keyring = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
bevy = { workspace = true }
multibase = "0.9"
hex = "0.4"
rand = "0.8"
