[package]
name = "fe-sync"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { workspace = true }
fe-database = { path = "../fe-database" }
fe-network = { path = "../fe-network" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
dirs = "5"

[dev-dependencies]
ulid = { workspace = true }
