[package]
name = "fe-sync"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { workspace = true }
fe-runtime = { path = "../fe-runtime" }
fe-database = { path = "../fe-database" }
fe-network = { path = "../fe-network" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
dirs = "5"
blake3 = { workspace = true }
hex = "0.4"
iroh = { workspace = true }
crossbeam = { workspace = true }

[dev-dependencies]
ulid = { workspace = true }
tempfile = "3"
