[package]
name = "fe-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { workspace = true }
bevy_egui = { workspace = true }
crossbeam = { workspace = true }
fe-database = { path = "../fe-database" }
fe-runtime = { path = "../fe-runtime" }
fe-renderer = { path = "../fe-renderer" }
serde = { workspace = true }
serde_json = { workspace = true }
rfd = { workspace = true }
