[package]
name = "fractalengine"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "fractalengine"
path = "src/main.rs"

[dev-dependencies]
tokio = { workspace = true }
ed25519-dalek = { workspace = true }
rand = "0.8"
fe-identity = { path = "../fe-identity" }
fe-webview = { path = "../fe-webview" }
fe-renderer = { path = "../fe-renderer" }
fe-auth = { path = "../fe-auth" }

[dependencies]
fe-runtime = { path = "../fe-runtime" }
fe-network = { path = "../fe-network" }
fe-database = { path = "../fe-database" }
fe-renderer = { path = "../fe-renderer" }
fe-ui = { path = "../fe-ui" }
bevy = { workspace = true }
crossbeam = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
