[package]
name = "fractalengine"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "fractalengine"
path = "src/main.rs"

[dev-dependencies]
tokio = { workspace = true }
ed25519-dalek = { workspace = true }
rand = "0.8"
fe-identity = { path = "../fe-identity" }
fe-webview = { path = "../fe-webview" }
fe-renderer = { path = "../fe-renderer" }
fe-auth = { path = "../fe-auth" }

[dependencies]
fe-runtime = { path = "../fe-runtime" }
fe-network = { path = "../fe-network" }
fe-database = { path = "../fe-database" }
fe-identity = { path = "../fe-identity" }
fe-sync = { path = "../fe-sync" }
fe-renderer = { path = "../fe-renderer" }
fe-ui = { path = "../fe-ui" }
fe-webview = { path = "../fe-webview", features = ["webview"] }
fe-api = { path = "../fe-api" }
bevy = { workspace = true }
bevy_egui = { workspace = true }
crossbeam = { workspace = true }
tokio = { workspace = true }
iroh = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
hex = "0.4"
anyhow = { workspace = true }
